--- a/app/src/main/res/drawable/product_item_border.xml
+++ b/app/src/main/res/drawable/product_item_border.xml
@@ -1,10 +1,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#FFFFFF" /> <!-- Background color -->
+    <solid android:color= "#80353554"/> <!-- Background color -->
 
     <stroke
-        android:width="5dp"
+        android:width="1dp"
         android:color="#CCCCCC" /> <!-- Border color -->
 
     <corners android:radius="8dp" /> <!-- Optional: rounded corners -->
