--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:background="@drawable/orange_gradient"
+    android:background="@drawable/background_gradient"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp">
@@ -15,7 +15,7 @@
         android:textSize="30sp"
         android:textStyle="bold"
         android:textColor="#ffffff"
-        android:gravity="center"
+        android:gravity="left"
         android:paddingBottom="12dp" />
 
     <!-- Horizontal RecyclerView (Top) -->
