--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="24dp"
-    android:background="@android:color/white">
+    android:background="@drawable/background_gradient">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -25,6 +25,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
+            android:textColor="#ffffff"
             android:gravity="center"
             android:text="Product Name"
             android:textSize="20sp"
@@ -41,25 +42,26 @@
             android:gravity="center">
 
             <TextView
-                android:id="@+id/productRating"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="⭐️ 3.5 / 5"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                android:gravity="start" />
-
-            <TextView
                 android:id="@+id/productPrice"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="0.0 ₺"
+                android:textColor="#3CA4EB"
                 android:textSize="16sp"
                 android:textStyle="bold"
+                android:gravity="start" />
+
+            <TextView
+                android:id="@+id/productRating"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:gravity="end"
-                android:textColor="#4CAF50" />
+                android:text="⭐️ 3.5 / 5"
+                android:textColor="#ffffff"
+                android:textSize="16sp"
+                android:textStyle="bold" />
         </LinearLayout>
 
         <!-- Product Description -->
@@ -68,6 +70,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
+            android:textColor="#ffffff"
+            android:paddingStart="12dp"
+            android:paddingEnd="12dp"
+            android:paddingTop="12dp"
+            android:paddingBottom="12dp"
+            android:background="@drawable/description_background"
             android:text="Product description goes here..."
             android:textSize="15sp"
             android:lineSpacingExtra="6dp"
