--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -29,9 +29,12 @@
         android:id="@+id/titleTextView"
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:textColor="#000"
-        android:textSize="16sp"
-        android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        android:textSize="1sp"
+        android:textAlignment="viewStart"
+        android:gravity="start|top"
+        android:paddingStart="12dp"
+        android:paddingEnd="12dp"
         android:autoSizeTextType="uniform"
         android:autoSizeMinTextSize="12sp"
         android:autoSizeMaxTextSize="18sp"
@@ -49,8 +52,11 @@
         android:id="@+id/priceTextView"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:textColor="#4CAF50"
-        android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        android:textAlignment="viewStart"
+        android:gravity="start|top"
+        android:paddingStart="12dp"
+        android:paddingEnd="12dp"
         android:textSize="14sp"
         android:textStyle="bold" />
 </LinearLayout>
